objects/CustomerObjective__c.object
<CustomObject>
    <description>Objectives is a custom object used to record and manage predefined Objectives used in Account Planning. Objectives can be linked to a parent Observation, but are not required to be.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Designates is this Objective value can be linked to an Account Plan.</description>
        <inlineHelpText>Designates is this Objective value can be linked to an Account Plan.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CatchAll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if this Objective value is used in the “OTHER” function as a catch all of non-specified Account Objective. There can only be one CatchAll record.</description>
        <inlineHelpText>Designates if this Objective value is used in the “OTHER” function as a catch all of non-specified Account Objective. There can only be one CatchAll record.</inlineHelpText>
        <label>CatchAll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A detailed description of the standard Objective record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A detailed description of the standard Objective record.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Implications__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implications</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Objective_Category__c</fullName>
        <description>The categories for common types of Objectives.</description>
        <inlineHelpText>The categories for common types of Objectives.</inlineHelpText>
        <label>Objective Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Care</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>People/Total Rewards Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ParentObjective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Universal Objective</label>
        <referenceTo>CustomerObjective__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Child_Objective</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Solution record linked to this Objective record.</description>
        <inlineHelpText>The Solution record linked to this Objective record.</inlineHelpText>
        <label>Solution</label>
        <referenceTo>SalesSolution__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Objective_Category__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Objectives</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Objective_Category__c</columns>
        <columns>Objectives__c</columns>
        <columns>Implications__c</columns>
        <columns>Active__c</columns>
        <columns>Solution__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Objectives_Active</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Objective_Category__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Objectives (Active)</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Objective</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>